--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="Site web cours">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/stylee.css">
+    <link rel="stylesheet" href="./css/stylee.css">
     <title>SCHOOL CENTER</title>
 </head>
 <body>
@@ -14,9 +14,9 @@
                 <h3 data-text="School center">School center</h3>
             </div>
             <div class="lien">
-                <a href="html/service.html">Service</a>
-                <a href="html/contact.html">Contact</a>
-                <a href="html/appropo.html">Apropo des nous</a>
+                <a href="./html/service.html">Service</a>
+                <a href="./html/contact.html">Contact</a>
+                <a href="./html/appropo.html">Apropo des nous</a>
             </div>
         </nav>
         <main>
@@ -26,17 +26,17 @@
         <section>
             <div class="mot" data-text="SCHOOL CENTER">SCHOOL CENTER</div>
             <div class="lien">
-                <a href="html/service.html">Contact</a>
-                <a href="html/contact.html">Service</a>
+                <a href="./html/service.html">Contact</a>
+                <a href="./html/contact.html">Service</a>
             </div>
         </section>
     </header>
     <div class="section1">
         <div class="lien" id="lien">
             <ul>
-                <li><a href="html/service.html">Service</a></li>
-                <li><a href="html/contact.html">Contact</a></li>
-                <li><a href="html/appropo.html" class="l1">Appropo des nous</a></li>
+                <li><a href="./html/service.html">Service</a></li>
+                <li><a href="./html/contact.html">Contact</a></li>
+                <li><a href="./html/appropo.html" class="l1">Appropo des nous</a></li>
             </ul>
         </div>
     </div>
@@ -47,7 +47,7 @@
             <hr>
         </div>
         <div class="logo">
-            <img src="asset/logo.jpg" alt="logo" width="110px">
+            <img src="./asset/logo.jpg" alt="logo" width="110px">
         </div>
         <div class="mot">
            <center>
@@ -75,5 +75,5 @@
         </div>
     </div>
 </body>
-<script src="js/index.js"></script>
+<script src="./js/index.js"></script>
 </html>
